--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -10,5 +10,8 @@
 }
 
 .title {
-    text-align: center;
+    text-align: left;
+    color: #b7883e;
+    margin-bottom: 20px;
+    font-size: 24px;
 }
