--- a/src/global.less
+++ b/src/global.less
@@ -41,3 +41,11 @@ body {
         // background: #EDEDED;
     }
 }
+
+.ant-table-content > .ant-table-body {
+    margin: 0 !important;;
+  }
+  
+.dark_row {
+background: #f9f9f9;
+}
