--- a/src/global.less
+++ b/src/global.less
@@ -42,10 +42,14 @@ body {
     }
 }
 
+.ant-layout-sider {
+    background: #4276a4 !important;
+}
+
 .ant-table-content > .ant-table-body {
     margin: 0 !important;;
   }
   
 .dark_row {
-background: #f9f9f9;
+    background: #f9f9f9;
 }
